--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -43,7 +43,7 @@
     display: flex;
     align-items: center;
 }
-.second__links-images img+img{
+.second__links-images div+div{
     margin-left: 12px;
 }
 .second__links-images img:hover{
