--- a/src/components/mainpage/new-collection/newcollection.css
+++ b/src/components/mainpage/new-collection/newcollection.css
@@ -13,11 +13,15 @@
     display: flex;
     justify-content: space-between;
 }
+.images__link{
+    text-decoration: none;
+}
 .item__description-block{
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    color: #000000;
 }
 .item__description{
     margin-bottom: 0px;
